--- a/css/style.css
+++ b/css/style.css
@@ -31,130 +31,9 @@
      color: #111111;
      margin: 0 
 }
- h1 {
-     font-size: 24px 
-}
- h2 {
-     font-size: 22px 
-}
- h3 {
-     font-size: 18px 
-}
- h4 {
-     font-size: 16px 
-}
- h5 {
-     font-size: 14px 
-}
- h6 {
-     font-size: 13px 
-}
- *, *::after, *::before {
-     -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-     box-sizing: border-box;
-}
- h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-     color: #212121;
-     text-decoration: none!important;
-     opacity: 1 
-}
- button:focus {
-     outline: none;
-}
- ul, li, ol {
-     margin: 0px;
-     padding: 0px;
-     list-style: none;
-}
- p {
-     margin: 0px;
-     font-weight: 300;
-     font-size: 15px;
-     line-height: 24px;
-}
- a {
-     color: #222222;
-     text-decoration: none;
-     outline: none !important;
-}
- a, .btn {
-     text-decoration: none !important;
-     outline: none !important;
-     -webkit-transition: all .3s ease-in-out;
-     -moz-transition: all .3s ease-in-out;
-     -ms-transition: all .3s ease-in-out;
-     -o-transition: all .3s ease-in-out;
-     transition: all .3s ease-in-out;
-}
- img {
-     max-width: 100%;
-     height: auto;
-}
- :focus {
-     outline: 0;
-}
- .btn-custom {
-     margin-top: 20px;
-     background-color: transparent !important;
-     border: 2px solid #ddd;
-     padding: 12px 40px;
-     font-size: 16px;
-}
- .lead {
-     font-size: 18px;
-     line-height: 30px;
-     color: #767676;
-     margin: 0;
-     padding: 0;
-}
- .form-control:focus {
-     border-color: #ffffff !important;
-     box-shadow: 0 0 0 .2rem rgba(255, 255, 255, .25);
-}
- .navbar-form input {
-     border: none !important;
-}
- .badge {
-     font-weight: 500;
-}
- blockquote {
-     margin: 20px 0 20px;
-     padding: 30px;
-}
- button {
-     border: 0;
-     margin: 0;
-     padding: 0;
-     cursor: pointer;
-}
- .full {
-     float: left;
-     width: 100%;
-}
- .layout_padding {
-     padding-top: 90px;
-     padding-bottom: 90px;
-}
- .layout_padding_2 {
-     padding-top: 75px;
-     padding-bottom: 75px;
-}
- .light_silver {
-     background: #f9f9f9;
-}
- .theme_bg {
-     background: #38c8a8;
-}
- .margin_top_30 {
-     margin-top: 30px !important;
-}
- .full {
-     width: 100%;
-     float: left;
-     margin: 0;
-     padding: 0;
-}
+
+/* ----------------------------add cart ---------------------------------------------------------- */
+
 /**-- heading section --**/
  .main_heading {
      text-align: center;
